--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/webenot/react-meetups/issues"
   },
-  "homepage": "https://github.com/webenot/react-meetups#readme"
+  "homepage": "https://github.com/webenot/react-meetups#readme",
+  "devDependencies": {
+    "eslint": "^7.31.0"
+  }
 }
